--- a/src/main/infra/chucknorris-svc.yml
+++ b/src/main/infra/chucknorris-svc.yml
@@ -7,8 +7,9 @@ metadata:
 spec:
   # clusterIP: 10.0.0.10
   ports:
-  - name: api
-    port: 8080
+  - port: 80
+    protocol: "TCP"
+    targetPort: 8080
   selector:
     app: chuck
     version: 0.1.0
