--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: '$app'
+  name: $namespace
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: '$app'
-  namespace: '$app'
+  name: $app
+  namespace: $namespace
   labels:
-    app: '$app'
+    app: $app
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: '$app'
+      app: $app
   template:
     metadata:
-      name: '$app'
+      name: $app
       labels:
-        app: '$app'
+        app: $app
         build: $tag
     spec:
       containers:
-      - name: '$app'
+      - name: $app
         image: '$dockerRegistry:$tag'
         ports:
         - name: http
@@ -40,14 +40,31 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: '$app'
-  namespace: '$app'
+  name: $app
+  namespace: $namespace
   labels:
-    app: '$app'
+    app: $app
 spec:
-  type: LoadBalancer
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: http
   selector:
-    app: '$app'
+    app: $app
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: $app
+  namespace: $namespace
+  labels:
+    app: $app
+spec:
+  rules:
+  - host: $namespace.app.$domain
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: $app
+          servicePort: http
