--- a/deployment.yaml
+++ b/deployment.yaml
@@ -11,7 +11,7 @@ metadata:
   labels:
     app: $app
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: $app
@@ -46,8 +46,7 @@ metadata:
     app: $app
 spec:
   ports:
-  - name: http
-    port: 80
+  - port: 80
     targetPort: http
   selector:
     app: $app
@@ -61,10 +60,10 @@ metadata:
     app: $app
 spec:
   rules:
-  - host: $namespace.app.$domain
+  - host: $host
     http:
       paths:
       - path: /
         backend:
           serviceName: $app
-          servicePort: http
+          servicePort: 80
