--- a/deployment.yaml
+++ b/deployment.yaml
@@ -67,3 +67,62 @@ spec:
         backend:
           serviceName: $app
           servicePort: 80
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: agile-demo
+  namespace: $namespace
+  labels:
+    app: agile-demo
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: agile-demo
+  template:
+    metadata:
+      name: agile-demo
+      labels:
+        app: agile-demo
+    spec:
+      containers:
+      - name: agile-demo
+        image: agilestacks/agile-demo
+        env:
+        - name: KUBERNETES_NAMESPACE
+          value: $namespace
+        ports:
+        - name: http
+          containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: agile-demo
+  namespace: $namespace
+  labels:
+    app: agile-demo
+spec:
+  ports:
+  - port: 80
+    targetPort: http
+  selector:
+    app: agile-demo
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: agile-demo
+  namespace: $namespace
+  labels:
+    app: agile-demo
+spec:
+  rules:
+  - host: dashboard.$host
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: agile-demo
+          servicePort: 80
