--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "allure-commandline": "^1.5.0",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "eslint": "^3.17.1",
     "eslint-config-airbnb-base": "^11.1.1",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "mocha": "^3.2.0",
+    "mocha-allure-reporter": "^1.2.4",
+    "mocha-multi": "^0.10.0"
   },
   "engines": {
     "node": ">=7"
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "eslint --ext .js src/"
+    "lint": "eslint --ext .js src/",
+    "test": "mocha -R mocha-multi --reporter-options spec=-,mocha-allure-reporter=-",
+    "report": "allure generate allure-results -o allure-report"
   }
 }
